syntax = "proto3";

option go_package = ".;link";

package user;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";

// Option annotation docs
// https://github.com/googleapis/googleapis/blob/master/google/api/http.proto

service LinkshortService {
  rpc Redirect (RedirectRequest) returns (RedirectReply) {
     option (google.api.http) = {
        get: "/{short_path}"
     };
  }
  rpc CreateLink (CreateLinkRequest) returns (CreateLinkReply) {
    option (google.api.http) = {
      post: "/api/link"
      body: "*"
    };
  }
}

// Validation docs
// https://github.com/envoyproxy/protoc-gen-validate

message CreateLinkRequest {
  string long_uri = 1 [(validate.rules).string = {uri: true, max_len: 2048}];
}

message CreateLinkReply {
  string short_uri = 1;
}

message RedirectRequest {
  string short_path = 1 [(validate.rules).string = {pattern:   "^[a-zA-Z0-9_]*$", max_len: 2048}];
}

message RedirectReply {
  string long_uri = 1;
}